--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,32 @@
 #edit * {
     height: 100%;
 }
+
+.inactive {
+    animation: hide 0.5s ease forwards;
+}
+
+@keyframes hide {
+    0% {
+        opacity: 1;
+    }
+    99% {
+        top: 0;
+    }
+    100% {
+        opacity: 0;
+        top: 100%;
+    }
+}
+
+.loading {
+    position: fixed;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    justify-content: center;
+    align-items: center;
+}
